# MPC-with-levmar-auto-parameter-tuning

./: ReadMe  test.rb
mpc/: CMakeLists.txt  MPC.cpp  MPC.h  main.cpp
mpc/curve/: cks  cxs  cyaws  cys  sps
mpc/trajectory/: recorded_v  recorded_x  recorded_y  sp
